topic panel is now functional